Fixed: Feed Alignments

--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,12 @@ body{
     display:flexbox;
 }
 .wrapper{
-    width: 500px;
+    width: 400px;
     height: 100%;
     margin: auto;
     padding: 5px;
-    display: flexbox;
+    display: flex;
+    justify-items: center;
     text-align: center;
     
 }
@@ -25,7 +26,6 @@ header{
 h1{
     width: 100%;
     height: 5%;
-    font-family: Verdana;
     text-align: center;
 }
 /*Feed Elements or Content Boxes*/
@@ -37,13 +37,12 @@ h1{
     position:relative;
 }
 .box-header{
-    display:contents;
-}
-h2{
-    text-align: left;
+    display:flex;
+    justify-content:space-between;
 }
 .date{
-    text-align: right;
+    
+    color: gray;
 }
 .content{
     margin: 10%;
